# practice-3

./: README.md  dataloader.py  main.ipynb  pyproject.toml  train.py
src/: VITmodel.py  dataloader.py  train.py
src/task-4/: dataloader.py  model.py  train.py
