[tool.poetry]
name = "practice-3"
version = "0.1.0"
description = ""
authors = ["Dani <jessi-sleto@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.1.0"
torchvision = "^0.16.0"
matplotlib = "^3.8.0"
numpy = "^1.26.1"
lightning = "^2.1.0"
torchmetrics = "^1.2.0"
wandb = "^0.15.12"
einops = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
